3496 - Fix FRA geo beta message overlapping with new toolbar components

--- a/src/client/components/PageLayout/Toolbar/Toolbar.scss
+++ b/src/client/components/PageLayout/Toolbar/Toolbar.scss
@@ -49,6 +49,6 @@
   font-size: $font-l;
   text-align: center;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 40%;
+  transform: translateX(40%);
 }
